# Lacuna

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  array_api_standard.md  clippy_output.txt  pyproject.toml
.github/workflows/: docs-build.yml  pages.yml  python-ci.yml  python-format.yml  update_roadmap.yml
crates/lacuna-core/: Cargo.toml
crates/lacuna-core/src/: array.rs  broadcast.rs  coo.rs  csc.rs  csr.rs  device.rs  dtype.rs  lib.rs  nd.rs  shape.rs
crates/lacuna-core/tests/: csr_tests.rs
crates/lacuna-io/: Cargo.toml
crates/lacuna-io/src/: lib.rs
crates/lacuna-kernels/: Cargo.toml  REFACTOR_PLAN.md
crates/lacuna-kernels/src/: arith.rs  cleanup.rs  convert.rs  lib.rs  reduce.rs  spmm.rs  spmv.rs  transform.rs  util.rs
crates/lacuna-kernels/src/data_type_functions/: astype.rs  mod.rs
crates/lacuna-kernels/src/elementwise/: abs.rs  add.rs  divide.rs  floor_divide.rs  mod.rs  multiply.rs  power.rs  remainder.rs  sign.rs  subtract.rs
crates/lacuna-kernels/src/linalg/: matmul.rs  matrix_transpose.rs  mod.rs  tensordot.rs  vecdot.rs
crates/lacuna-kernels/src/manipulation/: diff.rs  mod.rs  permute_dims.rs  reshape.rs
crates/lacuna-kernels/src/statistical/: cumulative.rs  logic.rs  mean.rs  minmax.rs  mod.rs  prod.rs  sum.rs  varstd.rs
crates/lacuna-kernels/src/utility/: eliminate_zeros.rs  mod.rs  prune.rs  util.rs
crates/lacuna-kernels/tests/: csc_coo.rs  kernels_tests.rs  nd_tests.rs  sp_ops.rs  test_cumulative.rs  test_logic_diff.rs  test_minmax.rs  test_power.rs  test_prod_varstd.rs  test_remainder.rs
crates/lacuna-py/: Cargo.toml
crates/lacuna-py/src/: coo.rs  csc.rs  csr.rs  functions.rs  lib.rs
crates/lacuna-py/src/array_api/: creation.rs  devices.rs  dtypes.rs  elementwise.rs  helpers.rs  linalg.rs  manipulation.rs  mod.rs  reduce.rs  utility.rs
crates/lacuna-py/src/types/: csc.rs  csr.rs  mod.rs
docs/: TODO.md  api.md  changelog.md  conf.py  develop.md  index.md  requirements.txt
docs/api/: lacuna.io.md  lacuna.md  lacuna.sparse.md  modules.md
docs/tutorials/: index.md  linear_solve.md  pagerank.md
python/benchmarks/: benchmark_coo.py  benchmark_csc.py  benchmark_csr.py  benchmark_linear_solve.py  benchmark_pagerank_block.py  benchmark_spmm_power.py  benchmark_spmv.py
python/lacun/: __init__.py  _runtime.py  _types.pyi
python/lacun/sparse/: __init__.py  base.py  coo.py  csc.py  csr.py
python/lacuna/: __init__.py  _runtime.py  _types.pyi
python/lacuna/array_api/: __init__.py  _dispatch.py  _fallbacks.py  _namespace.py  constants.py  creation.py  dtypes.py  indexing.py  linalg.py  manipulation.py  reductions.py  searching.py  sets.py  sorting.py
python/lacuna/array_api/_dispatch/: __init__.py  elementwise.py  manipulation.py  reductions.py  searching.py
python/lacuna/array_api/creation/: __init__.py
python/lacuna/array_api/dtypes/: __init__.py
python/lacuna/array_api/elementwise/: arithmetic.py  complex.py  exp_log.py  logical_bitwise.py  math_basic.py  nan_inf.py  trig_hyp.py
python/lacuna/array_api/indexing/: __init__.py
python/lacuna/array_api/linalg/: __init__.py
python/lacuna/array_api/manipulation/: __init__.py
python/lacuna/array_api/reductions/: __init__.py
python/lacuna/array_api/searching/: __init__.py
python/lacuna/array_api/sets/: __init__.py
python/lacuna/array_api/sorting/: __init__.py
python/lacuna/io/: mtx.py  npz.py
python/lacuna/sparse/: __init__.py  base.py  coo.py  coond.py  csc.py  csr.py
python/tests/: test_abs.py  test_conversions.py  test_coo.py  test_csc.py  test_csr.py  test_equal.py  test_more_ops.py  test_nd.py  test_negative.py  test_not_equal.py  test_ops.py  test_pow.py  test_remainder.py  test_rust_integration.py  test_sign.py  test_transpose_from_parts.py
python/tests/array_api/: test_axes_batch.py  test_basic_m1.py  test_csc_coo_axes_batch.py  test_diff_sparse.py  test_extra_wiring.py  test_linalg_tdot_vdot.py  test_namespace.py  test_reductions_cumulative.py  test_reductions_logical.py  test_reductions_minmax.py  test_reductions_minmax_coo.py  test_reductions_prod_coo.py  test_reductions_prod_csr_csc.py  test_reductions_varstd_coo.py
scripts/: bench_matrix_download.py  build_wheels.ps1  build_wheels.sh  check_python.ps1  check_python.sh  generate_roadmap_svg.py  release_notes.py
