[workspace]
members = [
    "crates/lacuna-core",
    "crates/lacuna-kernels",
    "crates/lacuna-io",
    "crates/lacuna-py",
]
resolver = "3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.package."lacuna-py"]
# Keep lacuna-py's original tighter release settings
opt-level = 3
strip = "symbols"
debug = 0
