[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "lacuna-sparse"
version = "0.1.0"
description = "High-performance sparse arrays/matrices for Python with a pure Rust core"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lacuna Group" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22",
]

[tool.maturin]
module-name = "lacuna._core"
python-packages = ["python/lacuna"]
include = [
  "python/lacuna/**",
  "LICENSE",
  "README.md",
]
manifest-path = "crates/lacuna-py/Cargo.toml"

[tool.ruff]
# Python formatting and linting (format-only checks in CI)
target-version = "py310"
line-length = 100
src = ["python"]
exclude = [
  "data",
  "build",
  "dist",
  ".venv",
  "target",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false
