[package]
name = "lacuna-py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
numpy = "0.27"
lacuna-core = { path = "../lacuna-core" }
lacuna-kernels = { path = "../lacuna-kernels" }
